# clean-architecture-api-sample

./: README.md  clean-architecture-api-sample.code-workspace
app/: Makefile  pyproject.toml
app/entity/: playlist.py
app/src/: main.py
app/src/adapter/controller/: playlist_controller.py
app/src/adapter/database/: database_client.py  playlist_repository.py
app/src/entity/: playlist.py  song.py
app/src/infrastructure/driver/: memory_database_client.py
app/src/infrastructure/framework/: playlist_schema.py
app/src/usecase/: playlist_interactor.py  playlist_repository.py  song_explorer.py
app/tests/usecase/: mock.py  test_playlist.py
docs/: flow.pu
