[tool.poetry]
name = "Clean Architecture API Sample"
version = "0.1.0"
description = ""
authors = ["Kondo Daisuke <gim0kondo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8" # 実際に利用するPythonのバージョンを指定

[tool.poetry.dev-dependencies]
flake8 = "*"
black = "*"
mypy = "*"
pytest = "*"
isort = "*"
safety = "*"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.mypy]
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core>=1.1.4"]
build-backend = "poetry.core.masonry.api"
